Add CreateProductDTO and refactor product creation flow
Introduces CreateProductDTO for product creation with validation. Refactors ProductoController and ProductoService to use the DTO, improving input validation and separation of concerns. Updates CORS configuration for broader compatibility and enhances JWT token validation error handling.